# frappe-routex

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  license  pyproject.toml
frappei/: __init__.py  hooks.py  modules.txt  utils.py
frappei/api/: __init__.py
routex/: __init__.py  hooks.py  modules.txt  utils.py
routex/api/: __init__.py
